@@ -1,3 +1,8 @@
+Wed May 05 09:26:11 GMT 2010  Richard Boulton <richard@tartarus.org>
+
+	* libs/build_xapian.sh: Use xapian-config not xapian-config-1.1,
+	  now we're using packages based on 1.2.x
+
 Tue May 04 21:54:06 GMT 2010  Richard Boulton <richard@tartarus.org>
 
 	* libs/get_xapian.py: Use new xapian archives - in particular,
